--- a/templates/error.html
+++ b/templates/error.html
@@ -76,6 +76,7 @@
 		<a href="#" class="white term"> Terms and Condition</a> <a class="white about" href="#"> - About</a> <a class="white contact" href="#"> - Contact</a>
 	</div>
 	<div>
+		Check this out - <a href="http://downloadanysong.com" target="_black" class="white" style="color:#b672f3;"> Download Any Song </a>
 	</div>
 </footer>
 
@@ -83,7 +84,23 @@
 <section class="term-sec">
   <h1>Terms of Service.</h1><br>
   <div class="terms">
-      
+      <b>1.</b> DownloadAnySong.com does not host any of the music files displayed on this site.<br>
+      <b>2.</b> DownloadAnySong.com indexes these files which are located on remote servers which neither DownloadAnySong.com nor it’s affiliates have any connection with / control of / association with.<br>
+      <b>3.</b> You download mp3 files from another host service. (not from DownloadAnySong.com).<br>
+      <b>4.</b> All music on is presented only for fact-finding listening.<br>
+      <b>5.</b> You must remove the song from the device after listening.<br>
+      <b>6.</b> If you don't delete files from the device, You will break the copyrights protection laws.<br>
+      <b>7.</b> All the rights on the songs are the property of their respective owners.<br>
+      <b>8.</b> If You have found a link to an illegal mp3 file or a search please drop us an email at downloadanysong.contact@gmail.com.<br>
+      <b>9.</b> What is copyright? Copyright is a form of protection provided for original works of authorship, including literary, dramatic, musical, graphic and audiovisual creations. “Copyright” literally means the right to copy, but has come to mean that body of exclusive rights granted by law to copyright owners for protection of their work.<br>
+      <br>
+      What is copyright infringement? Copyright infringement occurs when a copyrighted work is reproduced, distributed, performed, publicly displayed, or made into a derivative work without the permission of the copyright owner.
+      <br><br>
+      We hope you will work with us to keep the community a creative, legal and positive experience for everyone, including artists and creators.
+      <br><br>
+      <strong>Please email us at downloadanysong.contact@gmail.com for any takedown request.</strong>
+      <br><br>
+      Please also note that the information provided in this legal notice may be forwarded to the person who provided the allegedly infringing content.
   </div>
   <a href="#" class="close"></a>
 </section>
