--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
 				<form action="/" method="POST">
 					<div>Sayat.me/<input required type="text" name="uid" class="text saya" placeholder="username" autocomplete="off"></div><br>
 					<textarea required name="feedback" placeholder="Be honest and sincere, you'll stay anonymous. This feedback will be flooded. Enjoy Responsibly! 😉 (Custom Feedback Here)" autocomplete="off"></textarea><br>
-					<input required type="text" name="n" onkeyup="this.value=this.value.replace(/[^0-9]/g,'');" class="text" maxlength="4" placeholder="Total Flood Rate (eg. 15)" autocomplete="off"><br><br>
+					<input required type="text" name="n" onkeyup="this.value=this.value.replace(/[^0-9]/g,'');" class="text" maxlength="2" placeholder="Total Flood Rate (eg. 15)" autocomplete="off"><br><br>
                         <input name=_csrf_token type=hidden value="{{ csrf_token() }}">
 
 					<input type="submit" name="submit" value="Start Flooding" class="submit">
@@ -58,10 +58,10 @@
 </nav>
 <footer> 
 	<div>
-      <a href="#" class="white term"> T&C</a> <a class="white about" href="#"> - Who made this?</a> <a class="white contact" href="mailto:sameer18051998@gmail.com" target="_blank"> - Contact</a>
+      <a href="#" class="white term"> T&C</a> <a class="white about" href="#"> - Who made this?</a> <a class="white contact" href="mailto:contact@floodsayat.me" target="_blank"> - Contact</a>
     </div>
     <div>
-      
+      Check this out - <a href="https://www.downloadanysong.com" target="_black" class="white" style="color:#b672f3;"> DownloadAnySong </a>
     </div>
 </footer>
 
@@ -69,7 +69,16 @@
   <section class="term-sec">
     <h1>Terms of Service.</h1><br>
       <div class="terms">
-          
+          <b>1.</b> FloodSayat.me does not host any of the requests on this site.<br>
+          <b>2.</b> FloodSayat.me indexes these files which are located on remote servers which neither FloodSayat.me nor it’s affiliates have any connection with / control of / association with.<br>
+          <b>3.</b> You use this service from another host service. (not from FloodSayat.me).<br>
+          <b>4.</b> All services/activities are just-for-fun and do not intend to harm/spam any person or website.<br>
+          <b>5.</b> By using this website, you yourself take the responsibility of any loss or result. Whatever outcome is acheived, you are responsible for it and not us.<br>
+          <b>6.</b> If you don't delete files from the device, You will break the copyrights protection laws.<br>
+          <b>7.</b> Sayat.me is a property of SayAt.Me LLC.<br>
+
+          <strong>Please email us at contact@floodsayat.me for any takedown request.</strong>
+          <br><br>
       </div>
       <a href="#" class="close"></a>
   </section>
@@ -81,7 +90,7 @@
 We do web development, software development, automation, scraping and much more!
 Do email us at contact@floodsayat.me if you have any freelancing work/project related to our skill set :)
 
-We’re also actively looking for internships. Would appreciate if you could help, we are available at sameer18051998@gmail.com
+We’re also actively looking for internships. Would appreciate if you could help, we are available at contact@floodsayat.me
       </div>
       <a href="#" class="close"></a>
   </section>
