--- a/templates/rocket.html
+++ b/templates/rocket.html
@@ -66,8 +66,8 @@
     <h1>Attacking Now</h1>
       <p></p>
       <br>
-      
-      
+      <h3>Hey would you like to check out this amazing FREE music download website?</h3>
+      <a href="https://www.downloadanysong.com" target="_blank" style="color: aquamarine;text-decoration: none;">www.downloadanysong.com</a>
   </div>
 
 
@@ -89,7 +89,7 @@
       <a href="#" class="white term"> T&C</a> <a class="white about" href="#"> - Who made this?</a> <a class="white contact" href="mailto:contact@floodsayat.me" target="_blank"> - Contact</a>
     </div>
     <div>
-      
+      Check this out - <a href="https://www.downloadanysong.com" target="_black" class="white" style="color:#b672f3;"> DownloadAnySong </a>
     </div>
   </footer>
 
@@ -97,7 +97,16 @@
   <section class="term-sec">
     <h1>Terms of Service.</h1><br>
       <div class="terms">
-        
+          <b>1.</b> FloodSayat.me does not host any of the requests on this site.<br>
+          <b>2.</b> FloodSayat.me indexes these files which are located on remote servers which neither FloodSayat.me nor it’s affiliates have any connection with / control of / association with.<br>
+          <b>3.</b> You use this service from another host service. (not from FloodSayat.me).<br>
+          <b>4.</b> All services/activities are just-for-fun and do not intend to harm/spam any person or website.<br>
+          <b>5.</b> By using this website, you yourself take the responsibility of any loss or result. Whatever outcome is acheived, you are responsible for it and not us.<br>
+          <b>6.</b> If you don't delete files from the device, You will break the copyrights protection laws.<br>
+          <b>7.</b> Sayat.me is a property of SayAt.Me LLC.<br>
+
+          <strong>Please email us at contact@floodsayat.me for any takedown request.</strong>
+          <br><br>
       </div>
       <a href="#" class="close"></a>
   </section>
@@ -109,7 +118,7 @@
 We do web development, software development, automation, scraping and much more!
 Do email us at contact@floodsayat.me if you have any freelancing work/project related to our skill set :)
 
-We’re also actively looking for internships. Would appreciate if you could help, we are available at sameer18051998@gmail.com
+We’re also actively looking for internships. Would appreciate if you could help, we are available at contact@floodsayat.me
       </div>
       <a href="#" class="close"></a>
   </section>
