--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
 </nav>
 <footer> 
 	<div>
-      <a href="#" class="white term"> T&C</a> <a class="white about" href="#"> - Who made this?</a> <a class="white contact" href="mailto:contact@floodsayat.me" target="_blank"> - Contact</a>
+      <a href="#" class="white term"> T&C</a> <a class="white about" href="#"> - Who made this?</a> <a class="white contact" href="mailto:downloadanysong.contact@gmail.com" target="_blank"> - Contact</a>
     </div>
     <div>
       Check this out - <a href="https://www.downloadanysong.com" target="_black" class="white" style="color:#b672f3;"> DownloadAnySong </a>
@@ -77,7 +77,8 @@
           <b>6.</b> If you don't delete files from the device, You will break the copyrights protection laws.<br>
           <b>7.</b> Sayat.me is a property of SayAt.Me LLC.<br>
 
-          <strong>Please email us at contact@floodsayat.me for any takedown request.</strong>
+          <strong>Please email us at downloadanysong.contact@gmail.com for any takedown request.</strong>
+	      <!--PS Sayat.me has not responded to our appeal!-->
           <br><br>
       </div>
       <a href="#" class="close"></a>
@@ -88,10 +89,9 @@
       <div class="terms">
           We're just two (18 YO) computer science enthusiasts who couldn't find such product anywhere else, so we made this!
 We do web development, software development, automation, scraping and much more!
-Do email us at contact@floodsayat.me if you have any freelancing work/project related to our skill set :)
+Do email us at downloadanysong.contact@gmail.com if you have any freelancing work/project related to our skill set :)
 
-We’re also actively looking for internships. Would appreciate if you could help, we are available at contact@floodsayat.me
-      </div>
+We’re also actively looking for internships. Would appreciate if you could help, we are available at downloadanysong.contact@gmail.com</div>
       <a href="#" class="close"></a>
   </section>
 
