--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,9 @@
 
     <meta property="og:title" content="FloodSayat.me"/>
     <meta property="og:description" content="Flood your Sayat.me friends! 100% Free"/>
-    <meta property="og:site_name" content="Flood your Sayat.me friends! 100% Free"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://floodsayat.me/"/>
+    <meta property="og:image" content="{{url_for('static',filename='img/icon.png')}}">
+    <meta property="og:url" content="http://www.floodsayat.me/"/>
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="FloodSayat.me">
