--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="FloodSayat.me"/>
     <meta property="og:description" content="Flood your Sayat.me friends! 100% Free"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:image" content="http://www.floodsayat.me/static/img/iconlogo.jpg">
+    <meta property="og:image" content="http://www.floodsayat.me/static/img/icon.png">
     <meta property="og:url" content="http://www.floodsayat.me/"/>
 <!--    <meta property="og:url" content="http://floodsayat.me/"/>-->
 
